--- a/src/components/nav/_nav.scss
+++ b/src/components/nav/_nav.scss
@@ -1,16 +1,24 @@
+@import './../../scss/variable.scss';
+
 nav {
     width: 100%;
     display: flex;
     flex-flow: row;
     justify-content: space-evenly;
     place-items: center;
-    height: 40vh;
+    height: 8vh;
+    background-image: linear-gradient(90deg, $med-darkgreen, $med-navgreen);
+    font-family: 'Vollkorn', serif;
+
 
 
     button {
         // padding: 12%;
         padding: 3.4%;
-        background-color: blue;
+        background-color: $navgreen;
+        color: $lightgreen;
+        font-weight: 600;
+        font-size: 1.1em;
     }
 
     .gateway {
