styled device pages

--- a/src/components/form/_form.scss
+++ b/src/components/form/_form.scss
@@ -2,7 +2,7 @@
 
 form {
     font-family: 'Source Sans Pro', sans-serif;
-    height: 100%;
+    // height: 100%;
     margin: 10% auto;
     width: 90%;
     display: flex;
@@ -49,7 +49,7 @@ fieldset {
         background-color: transparent;
 
         &:active {
-            background-color: lighten($lightgreen, 2%);
+            background-color: lighten(lavenderblush, 2%);
             color: $navgreen;
         }
 
