--- a/src/scss/variable.scss
+++ b/src/scss/variable.scss
@@ -1,10 +1,12 @@
 // colors
 
 $navgreen: rgb(48, 65, 31);
+$navgreen-trans: rgba(48, 65, 31, .9);
 $med-navgreen: lighten($navgreen, 30%);
 $darkgreen: rgb(12, 27, 19);
 $textgreen: rgb(3, 12, 19);
 $lightgreen: rgb(216, 230, 195);
+$yellowtext: darken($lightgreen, 10%);
 $mediumgreen: rgb(135, 150, 70);
 $med-darkgreen: lighten($darkgreen, 70%);
 $grey: rgb(176, 177, 182);
@@ -12,7 +14,9 @@ $grey: rgb(176, 177, 182);
 // fonts Vollkorn', serif 'Source Sans Pro', sans-serif;
 
 
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400|Vollkorn:600,900&display=swap');
+// @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400|Vollkorn:600,900&display=swap');
+
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+JP:100,300,400,700&display=swap');
 
 
 // resets
