--- a/src/components/device/_device.scss
+++ b/src/components/device/_device.scss
@@ -1,56 +1,233 @@
-@import './../../scss/variable.scss';
-
 .device-array-box {
     width: 100%;
-    margin: 0 auto;
+    margin: 8% auto;
 
     .devices-card-container {
         width: 100%;
         display: grid;
+        grid-template-columns: repeat(auto-fit, minMax(400px, 1fr));
         grid-gap: 2%;
         place-items: center;
     }
 }
 
 .device-card-style {
-    text-align: left;
-    background-color: $med-darkgreen;
+    font-family: 'Noto Sans JP', sans-serif;
+    background-color: $navgreen-trans;
+    border-radius: 3px;
+    box-shadow: -4px 0 0 0 $yellowtext;
     padding: 2%;
     width: 80%;
-
     display: grid;
-    grid-template-columns: 2fr 1fr 1fr;
-    grid-template-rows: .5fr 1fr;
+    grid-template-areas:
+        'name _ data'
+        'model brand space';
+    place-items: center;
 
+    &:hover {
+        box-shadow: 6px 0 0 0 $med-darkgreen;
+    }
 
-    .card-model,
+    h6 {
+        display: inline;
+    }
+
     .card-brand {
-        background-color: $navgreen;
-        padding: 2%
+        grid-area: brand;
+    }
+
+    .card-model {
+        grid-area: model;
     }
 
     .card-name {
-        grid-column: 1/4;
-        background-color: $lightgreen;
+        grid-area: name;
         width: 100%;
-        padding-top: 4%;
         font-weight: 400;
-
+        color: $med-darkgreen;
+        box-shadow: 0 1px 0 0 $yellowtext;
     }
 
     .card-link {
-        grid-row: 1;
-        grid-column: 3/4;
+        grid-area: data;
         width: 60%;
         place-self: center;
 
-        h4 {
-            color: $med-navgreen;
+        h5 {
+            color: $yellowtext;
+
+            &:hover {
+                color: $med-darkgreen;
+            }
         }
     }
 }
 
 .card {
-    color: $mediumgreen;
+    color: $yellowtext;
     font-family: 'Source Sans Pro', sans-serif;
+}
+
+.device-add-item {
+    font-family: 'Noto Sans JP', sans-serif;
+    display: grid;
+    grid-template-columns: 1fr 4fr .2fr;
+    grid-template-areas:
+        'type itemlist space'
+        'btn itemlist space';
+    color: $darkgreen;
+    font-weight: 300;
+    margin: 2% auto;
+}
+
+.btn-container {
+    grid-area: btn
+}
+
+h3 {
+    grid-area: type;
+    font-weight: 400;
+}
+
+.space {
+    grid-area: space;
+    background-color: transparent;
+    // width: 2px;
+}
+
+.item-form {
+    grid-row: 3;
+    grid-column: 2/3;
+    font-family: 'Noto Sans JP', sans-serif;
+
+}
+
+ul {
+    grid-area: itemlist;
+    display: grid;
+    grid-gap: 2%;
+    color: $darkgreen;
+
+    .item {
+        font-family: 'Noto Sans JP', sans-serif;
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 180px;
+        place-items: center;
+        background-color: $med-darkgreen;
+        margin: 0 2%;
+
+        &:nth-child(2n) {
+            background-color: $lightgreen;
+        }
+
+        h3 {
+            grid-row: 1;
+            grid-column: 1;
+            text-align: right;
+            width: 90%;
+        }
+
+        span {
+            grid-row: 1;
+            grid-column: 2
+        }
+
+        div {
+
+            grid-row: 2;
+            grid-column: 1/2;
+            height: 100%;
+            width: 100%;
+            text-align: justify;
+            margin: 0;
+
+            background-color: $darkgreen;
+            color: lighten($med-darkgreen, 10%);
+
+            p {
+                display: block;
+                margin: 2%;
+            }
+        }
+    }
+
+}
+
+.table {
+    font-family: 'Noto Sans JP', sans-serif;
+    width: 100%;
+    display: grid;
+    background-color: $navgreen;
+
+    .user-info {
+        width: 100%;
+        grid-row: 1;
+        place-self: start;
+        margin: 2% auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+
+        .info {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+            width: 40%;
+
+            .dev-label {
+                font-size: .6rem;
+                text-align: left;
+                color: $yellowtext;
+                box-shadow: 0 0 1px $darkgreen;
+            }
+
+            .dev-info {
+                margin: 0;
+                place-self: start;
+                font-size: .8rem;
+                color: $med-darkgreen;
+            }
+        }
+
+    }
+}
+
+table {
+    grid-row: 1;
+    place-self: end;
+    width: 40%;
+    background-color: $navgreen-trans;
+    margin: 2% auto;
+
+    thead {
+        color: $yellowtext;
+        text-align: right;
+
+        h3 {
+            margin: 0;
+            text-align: right;
+        }
+    }
+
+    tr {
+        box-shadow: 0 0 1px lavender;
+        height: 20%;
+    }
+
+    th {
+        color: $med-darkgreen;
+        font-size: .8rem;
+        text-align: justify;
+        padding: 2% 1%;
+
+    }
+
+    td {
+        color: $yellowtext;
+        padding-left: 2%;
+        padding-right: 12%;
+        box-shadow: -1px 0 1px $med-darkgreen;
+
+    }
 }
