--- a/src/components/device/_device.scss
+++ b/src/components/device/_device.scss
@@ -6,7 +6,7 @@
         width: 100%;
         display: grid;
         grid-template-columns: repeat(auto-fit, minMax(400px, 1fr));
-        grid-gap: 2%;
+        grid-gap: 0.7%;
         place-items: center;
     }
 }
@@ -71,17 +71,17 @@
 .device-add-item {
     font-family: 'Noto Sans JP', sans-serif;
     display: grid;
-    grid-template-columns: 1fr 4fr .2fr;
+    grid-template-columns: 1fr 4fr 0.2fr;
     grid-template-areas:
         'type itemlist space'
         'btn itemlist space';
-    color: $darkgreen;
+    color: $textgreen;
     font-weight: 300;
     margin: 2% auto;
 }
 
 .btn-container {
-    grid-area: btn
+    grid-area: btn;
 }
 
 h3 {
@@ -96,10 +96,9 @@ h3 {
 }
 
 .item-form {
-    grid-row: 3;
+    grid-row: 2;
     grid-column: 2/3;
     font-family: 'Noto Sans JP', sans-serif;
-
 }
 
 ul {
@@ -110,37 +109,46 @@ ul {
 
     .item {
         font-family: 'Noto Sans JP', sans-serif;
+        @extend .list-font;
         width: 100%;
         display: grid;
         grid-template-columns: 1fr 180px;
         place-items: center;
-        background-color: $med-darkgreen;
+        background-color: $item-green;
+        color: $lightgreen;
         margin: 0 2%;
 
         &:nth-child(2n) {
             background-color: $lightgreen;
+            color: $darkgreen;
+            div {
+                background-color: $navgreen-trans;
+            }
         }
 
         h3 {
-            grid-row: 1;
-            grid-column: 1;
-            text-align: right;
+            grid-row: 2;
+            grid-column: 2;
+            text-align: center;
             width: 90%;
+            padding: 0;
+            margin: 0;
         }
 
         span {
             grid-row: 1;
-            grid-column: 2
+            grid-column: 2;
         }
 
         div {
-
-            grid-row: 2;
+            grid-row: 1/3;
             grid-column: 1/2;
             height: 100%;
             width: 100%;
-            text-align: justify;
             margin: 0;
+            display: flex;
+            justify-content: space-between;
+            flex-flow: row-reverse;
 
             background-color: $darkgreen;
             color: lighten($med-darkgreen, 10%);
@@ -148,10 +156,15 @@ ul {
             p {
                 display: block;
                 margin: 2%;
+                align-self: flex-end;
+            }
+            .sensorId {
+                padding: 0 2%;
+                font-weight: 900;
+                align-self: flex-start;
             }
         }
     }
-
 }
 
 .table {
@@ -176,7 +189,7 @@ ul {
             width: 40%;
 
             .dev-label {
-                font-size: .6rem;
+                font-size: 0.6rem;
                 text-align: left;
                 color: $yellowtext;
                 box-shadow: 0 0 1px $darkgreen;
@@ -185,11 +198,10 @@ ul {
             .dev-info {
                 margin: 0;
                 place-self: start;
-                font-size: .8rem;
+                font-size: 0.8rem;
                 color: $med-darkgreen;
             }
         }
-
     }
 }
 
@@ -217,10 +229,9 @@ table {
 
     th {
         color: $med-darkgreen;
-        font-size: .8rem;
+        font-size: 0.8rem;
         text-align: justify;
         padding: 2% 1%;
-
     }
 
     td {
@@ -228,7 +239,6 @@ table {
         padding-left: 2%;
         padding-right: 12%;
         box-shadow: -1px 0 1px $med-darkgreen;
-
     }
 }
 
