--- a/src/components/form/_form.scss
+++ b/src/components/form/_form.scss
@@ -3,7 +3,6 @@
 form {
     // font-family: 'Source Sans Pro', sans-serif;
     font-family: 'Noto Sans JP', sans-serif;
-    // height: 100%;
     margin: 10% auto;
     width: 90%;
     display: flex;
@@ -11,7 +10,7 @@ form {
     align-items: flex-start;
     box-sizing: border-box;
     justify-content: space-around;
-    padding: 4%;
+    padding: 0 4% 4%;
     background-image: linear-gradient(to bottom right, $med-darkgreen, $lightgreen);
     box-shadow: 1px 0 10px lavender;
     border-radius: 1%;
@@ -38,7 +37,7 @@ fieldset {
         padding-left: 4%;
     }
 
-    input[type="submit"] {
+    input[type='submit'] {
         font-weight: 900;
         text-indent: initial;
         text-align: right;
@@ -69,7 +68,6 @@ fieldset {
         pointer-events: none;
 
         &::after {
-
             position: absolute;
             left: 0px;
             bottom: -1px;
@@ -77,9 +75,8 @@ fieldset {
             width: 100%;
             border-bottom: 3px solid green;
             transform: translateX(-100%);
-            transition: transform .3s ease;
+            transition: transform 0.3s ease;
         }
-
     }
 
     .content-style {
@@ -87,7 +84,7 @@ fieldset {
         bottom: -11px;
         left: 0px;
         width: 96%;
-        transition: all .3s ease;
+        transition: all 0.3s ease;
         font-size: 14px;
         font-weight: 200;
         color: $navgreen;
@@ -97,17 +94,16 @@ fieldset {
     }
 }
 
-
 .field-label {
-    input:focus+.label-style .content-style {
+    input:focus + .label-style .content-style {
         transform: translateY(-100%);
         font-size: 18px;
         color: $navgreen;
         font-weight: 300;
     }
 
-    #birthDate:focus+.label-style .content-style,
-    #date:focus+.label-style .content-style {
+    #birthDate:focus + .label-style .content-style,
+    #date:focus + .label-style .content-style {
         transform: translateY(-250%);
         font-size: 16px;
         color: $navgreen;
@@ -120,7 +116,7 @@ fieldset {
     }
 }
 
-.field-label input:focus+.label-style::after,
-.field-label input:valid+.label-style::after {
+.field-label input:focus + .label-style::after,
+.field-label input:valid + .label-style::after {
     transform: translateY(0%);
 }
