--- a/src/components/form/_form.scss
+++ b/src/components/form/_form.scss
@@ -10,7 +10,7 @@ form {
     align-items: flex-start;
     box-sizing: border-box;
     justify-content: space-around;
-    padding: 0 4% 4%;
+    padding: 4%;
     background-image: linear-gradient(to bottom right, $med-darkgreen, $lightgreen);
     box-shadow: 1px 0 10px lavender;
     border-radius: 1%;
