--- a/src/components/device/device.scss
+++ b/src/components/device/device.scss
@@ -73,8 +73,8 @@
     display: grid;
     grid-template-columns: 1fr 4fr 0.2fr;
     grid-template-areas:
-        'type itemlist space'
-        'btn itemlist space';
+        'btn itemlist space'
+        'type itemlist space';
     color: $textgreen;
     font-weight: 300;
     margin: 2% auto;
